fix http on https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http:/dkn1fe.github.io/frontend-challenge-vk",
+  "homepage": "https://dkn1fe.github.io/frontend-challenge-vk",
   "name": "test-vk",
   "private": true,
   "version": "0.0.0",
